docs/v0.2.0a212/_sources/reference/_autosummary/hpcflow.sdk.config.types.ConfigDescriptor.rst.txt
hpcflow.sdk.config.types.ConfigDescriptor
=========================================

.. currentmodule:: hpcflow.sdk.config.types

.. autoclass:: ConfigDescriptor
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ConfigDescriptor.clear
      ~ConfigDescriptor.copy
      ~ConfigDescriptor.fromkeys
      ~ConfigDescriptor.get
      ~ConfigDescriptor.items
      ~ConfigDescriptor.keys
      ~ConfigDescriptor.pop
      ~ConfigDescriptor.popitem
      ~ConfigDescriptor.setdefault
      ~ConfigDescriptor.update
      ~ConfigDescriptor.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ConfigDescriptor.machine
      ~ConfigDescriptor.log_file_path
      ~ConfigDescriptor.environment_sources
      ~ConfigDescriptor.task_schema_sources
      ~ConfigDescriptor.command_file_sources
      ~ConfigDescriptor.parameter_sources
      ~ConfigDescriptor.default_scheduler
      ~ConfigDescriptor.default_shell
      ~ConfigDescriptor.schedulers
      ~ConfigDescriptor.shells
   
   